--- a/src/component/edge/index.css
+++ b/src/component/edge/index.css
@@ -2,30 +2,33 @@
   --edge: inset 0 0 0 var(--layout-line-width) rgb(var(--theme-accent)),
     inset 0 0 0 calc(var(--layout-line-width) * 4) rgba(var(--theme-accent), 0.1),
     inset 0 0 0 calc(var(--layout-line-width) * 8) rgba(var(--theme-accent), 0.1);
-  --edge-on-accent: inset 0 0 0 var(--layout-line-width) hsl(var(--theme-accent-text)),
-    inset 0 0 0 calc(var(--layout-line-width) * 4) hsla(var(--theme-accent-text), 0.1),
-    inset 0 0 0 calc(var(--layout-line-width) * 8) hsla(var(--theme-accent-text), 0.1);
+  --edge-on-accent: inset 0 0 0 var(--layout-line-width) hsl(var(--theme-accent-rgb-text)),
+    inset 0 0 0 calc(var(--layout-line-width) * 4) hsla(var(--theme-accent-rgb-text), 0.1),
+    inset 0 0 0 calc(var(--layout-line-width) * 8) hsla(var(--theme-accent-rgb-text), 0.1);
 }
 
 .edge {
   background-color: rgba(var(--theme-accent), 0.2);
-  width: 100vw;
-  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
   opacity: 0;
   border-radius: var(--theme-radius-base);
   box-shadow: var(--edge);
   z-index: var(--z-index-edge);
   pointer-events: none;
   transition: opacity var(--layout-transition-extra-fast);
-  /* transition:
-    opacity var(--layout-transition-extra-fast),
-    top var(--layout-duration-02),
-    left var(--layout-duration-02),
-    width var(--layout-duration-02),
-    height var(--layout-duration-02); */
+}
+
+.edge.is-edge-opening {
+  transition:
+    opacity var(--layout-transition-fast),
+    top var(--layout-transition-fast),
+    left var(--layout-transition-fast),
+    width var(--layout-transition-fast),
+    height var(--layout-transition-fast);
 }
 
 .is-theme-background-type-accent .edge {
