--- a/src/component/date/index.css
+++ b/src/component/date/index.css
@@ -25,6 +25,12 @@
   white-space: nowrap;
 }
 
+.date-date,
+.date-month,
+.date-year {
+  color: hsl(var(--theme-primary-120));
+}
+
 .date-separator {
   justify-content: center;
   color: rgb(var(--theme-accent));
@@ -32,7 +38,7 @@
 
 .is-theme-background-type-accent .date-separator {
   justify-content: center;
-  color: hsl(var(--theme-accent-text));
+  color: hsl(var(--theme-accent-rgb-text));
 }
 
 .date-date,
@@ -46,12 +52,12 @@
 .is-theme-background-type-accent .date-date,
 .is-theme-background-type-accent .date-month,
 .is-theme-background-type-accent .date-year {
-  color: hsl(var(--theme-accent-text));
+  color: hsl(var(--theme-accent-rgb-text));
 }
 
 .is-theme-background-type-color .date-day,
 .is-theme-background-type-color .date-date,
 .is-theme-background-type-color .date-month,
 .is-theme-background-type-color .date-year {
-  color: hsl(var(--theme-background-color-text));
+  color: hsl(var(--theme-background-color-rgb-text));
 }
