--- a/src/component/dropdown/index.css
+++ b/src/component/dropdown/index.css
@@ -6,7 +6,7 @@
   padding: 1em;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: calc(var(--dropdown-menu-top) * 1px);
   left: calc(var(--dropdown-menu-left) * 1px);
   z-index: var(--z-index-dropdown);
