--- a/src/component/greeting/index.css
+++ b/src/component/greeting/index.css
@@ -21,13 +21,13 @@
 }
 
 .is-theme-background-type-accent .greeting-text {
-  color: hsl(var(--theme-accent-text));
+  color: hsl(var(--theme-accent-rgb-text));
 }
 
 .is-theme-background-type-accent .greeting-text {
-  color: hsl(var(--theme-accent-text));
+  color: hsl(var(--theme-accent-rgb-text));
 }
 
 .is-theme-background-type-color .greeting-text {
-  color: hsl(var(--theme-background-color-text));
+  color: hsl(var(--theme-background-color-rgb-text));
 }
