--- a/src/component/headerItem/index.css
+++ b/src/component/headerItem/index.css
@@ -7,6 +7,10 @@
   transition: gap var(--layout-transition-extra-fast) var(--layout-duration-04);
 }
 
+.is-edge .header-item {
+  transition: gap var(--layout-transition-extra-fast);
+}
+
 .is-header-edit .header-item {
   transition: gap var(--layout-transition-extra-fast);
 }
@@ -31,10 +35,18 @@
   transition: height var(--layout-transition-extra-fast) var(--layout-duration-04), margin var(--layout-transition-extra-fast);
 }
 
+.is-edge .header-item-control {
+  transition: height var(--layout-transition-extra-fast), margin var(--layout-transition-extra-fast);
+}
+
 .is-header-edit .header-item-control {
   margin: 0;
   height: 2.5em;
   transition: height var(--layout-transition-extra-fast), margin var(--layout-transition-extra-fast) var(--layout-duration-04);
+}
+
+.is-edge.is-header-edit .header-item-control {
+  transition: height var(--layout-transition-extra-fast), margin var(--layout-transition-extra-fast);
 }
 
 .header-item-control-group {
@@ -46,6 +58,10 @@
 .is-header-edit .header-item-control-group {
   width: 4em;
   transition: width var(--layout-transition-extra-fast) var(--layout-duration-04);
+}
+
+.is-edge.is-header-edit .header-item-control-group {
+  transition: width var(--layout-transition-extra-fast);
 }
 
 .header-item-search {
