--- a/src/component/shade/index.css
+++ b/src/component/shade/index.css
@@ -9,6 +9,7 @@
   z-index: var(--z-index-shade);
   transition: background-color var(--layout-transition-extra-fast), opacity var(--layout-transition-extra-fast);
   pointer-events: all;
+  backdrop-filter: blur(calc(var(--theme-shade-blur) * 1px));
 }
 
 .shade.is-transparent {
