--- a/src/component/base/state/index.css
+++ b/src/component/base/state/index.css
@@ -26,10 +26,6 @@
   visibility: visible !important;
 }
 
-.is-scrolll-disabled {
-  overflow: hidden !important;
-}
-
 .is-small {
   transform: scale(0.5) !important;
 }
@@ -39,15 +35,15 @@
 }
 
 .is-scroll-disabled {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .is-scroll-x-disabled {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .is-scroll-y-disabled {
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
 
 .is-shake {
