--- a/src/component/bookmark/index.css
+++ b/src/component/bookmark/index.css
@@ -34,6 +34,17 @@
   --bookmark-clip-padding: 1;
 }
 
+.bookmark-area {
+  flex-grow: 1;
+  padding: calc(var(--layout-space) * var(--layout-padding));
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--layout-space) * var(--layout-padding));
+  align-items: stretch;
+  justify-content: stretch;
+}
+
 .bookmark {
   font-size: 1em;
   position: relative;
