--- a/src/component/theme/index.css
+++ b/src/component/theme/index.css
@@ -47,23 +47,6 @@
   --theme-background-color-rgb-text: 0, 0%, calc(((((var(--theme-background-color-rgb-r) * var(--theme-t-r)) + (var(--theme-background-color-rgb-g) * var(--theme-t-g)) + (var(--theme-background-color-rgb-b) * var(--theme-t-b))) / 255) - var(--theme-t)) * -10000000%);
 }
 
-:root {
-  --theme-primary-1: var(--theme-primary-1-h), calc(var(--theme-primary-1-s) * 1%), calc(var(--theme-primary-1-l) * 1%);
-  --theme-primary-2: var(--theme-primary-2-h), calc(var(--theme-primary-2-s) * 1%), calc(var(--theme-primary-2-l) * 1%);
-  --theme-primary-3: var(--theme-primary-3-h), calc(var(--theme-primary-3-s) * 1%), calc(var(--theme-primary-3-l) * 1%);
-  --theme-primary-4: var(--theme-primary-4-h), calc(var(--theme-primary-4-s) * 1%), calc(var(--theme-primary-4-l) * 1%);
-  --theme-primary-5: var(--theme-primary-5-h), calc(var(--theme-primary-5-s) * 1%), calc(var(--theme-primary-5-l) * 1%);
-  --theme-primary-6: var(--theme-primary-6-h), calc(var(--theme-primary-6-s) * 1%), calc(var(--theme-primary-6-l) * 1%);
-  --theme-primary-7: var(--theme-primary-7-h), calc(var(--theme-primary-7-s) * 1%), calc(var(--theme-primary-7-l) * 1%);
-  --theme-primary-8: var(--theme-primary-8-h), calc(var(--theme-primary-8-s) * 1%), calc(var(--theme-primary-8-l) * 1%);
-  --theme-primary-9: var(--theme-primary-9-h), calc(var(--theme-primary-9-s) * 1%), calc(var(--theme-primary-9-l) * 1%);
-  --theme-primary-10: var(--theme-primary-10-h), calc(var(--theme-primary-10-s) * 1%), calc(var(--theme-primary-10-l) * 1%);
-  --theme-primary-11: var(--theme-primary-11-h), calc(var(--theme-primary-11-s) * 1%), calc(var(--theme-primary-11-l) * 1%);
-  --theme-primary-12: var(--theme-primary-12-h), calc(var(--theme-primary-12-s) * 1%), calc(var(--theme-primary-12-l) * 1%);
-  --theme-primary-13: var(--theme-primary-13-h), calc(var(--theme-primary-13-s) * 1%), calc(var(--theme-primary-13-l) * 1%);
-  --theme-primary-14: var(--theme-primary-14-h), calc(var(--theme-primary-14-s) * 1%), calc(var(--theme-primary-14-l) * 1%);
-}
-
 .is-theme-style-light {
   --theme-primary-010: var(--theme-primary-14);
   --theme-primary-020: var(--theme-primary-13);
@@ -364,17 +347,23 @@
   background-image: linear-gradient(calc(var(--theme-background-gradient-angle) * 1deg), rgb(var(--theme-background-gradient-start)), rgb(var(--theme-background-gradient-end)));
 }
 
-.theme-background-type-image {
+.theme-background-type-image-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: calc(var(--theme-background-image-opacity) / 100);
   background-image: var(--theme-background-image);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
   transform: scale(calc(calc(var(--theme-background-image-scale) / 100) + calc(var(--theme-background-image-blur) / 400)));
-  filter: blur(calc(var(--theme-background-image-blur) * 1px));
+  filter: blur(calc(var(--theme-background-image-blur) * 1px)) grayscale(calc(var(--theme-background-image-grayscale) / 100));
 }
 
-.theme-background-type-image:after {
-  content: "";
+.theme-background-type-image-accent {
   background-color: rgba(var(--theme-accent), calc(var(--theme-background-image-accent) / 100));
   position: absolute;
   top: 0;
@@ -384,13 +373,19 @@
   z-index: 2;
 }
 
-.theme-background-type-video {
+.theme-background-type-video-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: calc(var(--theme-background-video-opacity) / 100);
+  filter: blur(calc(var(--theme-background-video-blur) * 1px)) grayscale(calc(var(--theme-background-video-grayscale) / 100));
   transform: scale(calc(var(--theme-background-video-scale) / 100));
-  filter: blur(calc(var(--theme-background-video-blur) * 1px));
 }
 
-.theme-background-type-video:after {
-  content: "";
+.theme-background-type-video-accent {
   background-color: rgba(var(--theme-accent), calc(var(--theme-background-video-accent) / 100));
   position: absolute;
   top: 0;
@@ -407,105 +402,11 @@
   pointer-events: none;
 }
 
-.is-theme-background-type-theme .theme-background-type-theme {
-  opacity: 1;
-}
-
-.is-theme-background-type-accent .theme-background-type-accent {
-  opacity: 1;
-}
-
-.is-theme-background-type-color .theme-background-type-color {
-  opacity: 1;
-}
-
-.is-theme-background-type-gradient .theme-background-type-gradient {
-  opacity: 1;
-}
-
-.is-theme-background-type-image .theme-background-type-image {
-  opacity: calc(var(--theme-background-image-opacity) / 100);
-}
-
+.is-theme-background-type-theme .theme-background-type-theme,
+.is-theme-background-type-accent .theme-background-type-accent,
+.is-theme-background-type-color .theme-background-type-color,
+.is-theme-background-type-gradient .theme-background-type-gradient,
+.is-theme-background-type-image .theme-background-type-image,
 .is-theme-background-type-video .theme-background-type-video {
-  opacity: calc(var(--theme-background-video-opacity) / 100);
-}
-
-.theme-accent-preset {
-  display: grid;
-  grid-gap: calc(var(--form-space) / 2);
-  grid-template-rows: repeat(7, auto);
-  grid-auto-flow: column;
-  justify-items: center;
-}
-
-.theme-accent-preset-item {
-  background-color: hsl(var(--theme-accent-preset-item-color-hsl-h), calc(var(--theme-accent-preset-item-color-hsl-s) * 1%), calc(var(--theme-accent-preset-item-color-hsl-l) * 1%));
-  padding: 0;
-  width: 1.5em;
-  height: 1.5em;
-  min-width: initial;
-  min-height: initial;
-}
-
-.theme-accent-preset-type-grey {
-  display: block;
-}
-
-.theme-accent-preset-type-primary {
-  display: block;
-}
-
-.theme-accent-preset-type-secondary {
-  display: none;
-}
-
-.theme-accent-preset-item:focus,
-.theme-accent-preset-item:hover,
-.theme-accent-preset-item:active {
-  background-color: hsl(var(--theme-accent-preset-item-color-hsl-h), calc(var(--theme-accent-preset-item-color-hsl-s) * 1%), calc(var(--theme-accent-preset-item-color-hsl-l) * 1%));
-}
-
-@media (min-width: 550px) {
-  .theme-accent-preset-item {
-    width: 1.25em;
-    height: 1.25em;
-  }
-
-  .theme-accent-preset-type-secondary {
-    display: block;
-  }
-}
-
-@media (min-width: 700px) {
-  .theme-accent-preset-item {
-    width: 1.5em;
-    height: 1.5em;
-  }
-
-  .theme-accent-preset-type-secondary {
-    display: none;
-  }
-}
-
-@media (min-width: 900px) {
-  .theme-accent-preset-item {
-    width: 1.25em;
-    height: 1.25em;
-  }
-
-  .theme-accent-preset-type-secondary {
-    display: block;
-  }
-}
-
-@media (min-width: 1100px) {
-  .theme-accent-preset-item {
-    width: 1.5em;
-    height: 1.5em;
-  }
-
-  .theme-accent-preset-type-secondary {
-    display: block;
-  }
+  opacity: 1;
 }
