--- a/src/component/toolbarControl/index.css
+++ b/src/component/toolbarControl/index.css
@@ -1,34 +1,38 @@
 :root {
-  --toolbar-position-offset: 1.25em;
+  --toolbar-position-offset: 1em;
 }
 
 .toolbar {
   display: flex;
-  position: fixed;
   z-index: var(--z-index-toolbar);
 }
 
-.toolbar.is-toolbar-position-top-left {
+.is-toolbar-location-corner .toolbar {
+  position: fixed;
+}
+
+.is-toolbar-location-corner.is-toolbar-position-top-left .toolbar {
   top: var(--toolbar-position-offset);
   left: var(--toolbar-position-offset);
 }
 
-.toolbar.is-toolbar-position-top-right {
+.is-toolbar-location-corner.is-toolbar-position-top-right .toolbar {
   top: var(--toolbar-position-offset);
   right: var(--toolbar-position-offset);
 }
 
-.toolbar.is-toolbar-position-bottom-left {
+.is-toolbar-location-corner.is-toolbar-position-bottom-left .toolbar {
   bottom: var(--toolbar-position-offset);
   left: var(--toolbar-position-offset);
 }
 
-.toolbar.is-toolbar-position-bottom-right {
+.is-toolbar-location-corner.is-toolbar-position-bottom-right .toolbar {
   bottom: var(--toolbar-position-offset);
   right: var(--toolbar-position-offset);
 }
 
 .toolbar-control {
+  font-size: calc(var(--toolbar-size) * 0.01em);
   display: flex;
   transition: opacity var(--layout-transition-extra-fast);
 }
