--- a/src/component/clock/index.css
+++ b/src/component/clock/index.css
@@ -25,12 +25,6 @@
   white-space: nowrap;
 }
 
-.clock-minute,
-.clock-second,
-.clock-meridiem {
-  color: hsl(var(--theme-primary-120));
-}
-
 .clock-separator {
   justify-content: center;
   color: rgb(var(--theme-accent));
@@ -60,4 +54,19 @@
 .is-theme-background-type-color .clock-second,
 .is-theme-background-type-color .clock-meridiem {
   color: hsl(var(--theme-background-color-rgb-text));
+}
+
+.is-header-item-justify-left .clock {
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.is-header-item-justify-center .clock {
+  justify-content: center;
+  text-align: center;
+}
+
+.is-header-item-justify-right .clock {
+  justify-content: flex-end;
+  text-align: right;
 }
