--- a/src/component/date/index.css
+++ b/src/component/date/index.css
@@ -25,12 +25,6 @@
   white-space: nowrap;
 }
 
-.date-date,
-.date-month,
-.date-year {
-  color: hsl(var(--theme-primary-120));
-}
-
 .date-separator {
   justify-content: center;
   color: rgb(var(--theme-accent));
@@ -60,4 +54,19 @@
 .is-theme-background-type-color .date-month,
 .is-theme-background-type-color .date-year {
   color: hsl(var(--theme-background-color-rgb-text));
+}
+
+.is-header-item-justify-left .date {
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.is-header-item-justify-center .date {
+  justify-content: center;
+  text-align: center;
+}
+
+.is-header-item-justify-right .date {
+  justify-content: flex-end;
+  text-align: right;
 }
