--- a/src/component/header/index.css
+++ b/src/component/header/index.css
@@ -5,6 +5,7 @@
 .header-area {
   flex-grow: 1;
   padding: calc(var(--layout-space) * var(--layout-padding));
+  gap: calc(var(--layout-space) * var(--layout-padding));
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,6 +18,15 @@
   flex-wrap: wrap;
   flex-grow: 1;
   gap: calc(var(--layout-space) * var(--layout-gutter));
+}
+
+.is-layout-direction-horizontal .header-area {
+  flex-grow: 0;
+  justify-self: center;
+}
+
+.is-layout-direction-horizontal .header {
+  flex-grow: 0;
 }
 
 .is-header-item-justify-left .header {
@@ -48,6 +58,14 @@
   box-shadow: var(--edge-on-accent);
 }
 
+.header-item-greeting .header-item-body {
+  font-size: calc(var(--header-greeting-size) * 0.01em);
+}
+
+.header-item-transitional .header-item-body {
+  font-size: calc(var(--header-transitional-size) * 0.01em);
+}
+
 .header-item-clock .header-item-body {
   font-size: calc(var(--header-clock-size) * 0.01em);
 }
@@ -58,4 +76,18 @@
 
 .header-item-search .header-item-body {
   font-size: calc(var(--header-search-size) * 0.01em);
+}
+
+.header-border-top,
+.header-border-bottom {
+  border-radius: var(--theme-radius-base);
+  width: 100%;
+}
+
+.header-border-top {
+  border-top: calc(var(--layout-line-width) * var(--header-border-top)) solid rgb(var(--theme-accent));
+}
+
+.header-border-bottom {
+  border-bottom: calc(var(--layout-line-width) * var(--header-border-bottom)) solid rgb(var(--theme-accent));
 }
