--- a/src/component/transitional/index.css
+++ b/src/component/transitional/index.css
@@ -20,10 +20,6 @@
   align-items: center;
 }
 
-.transitional-text {
-  color: hsl(var(--theme-primary-120));
-}
-
 .is-theme-background-type-accent .transitional-text {
   color: hsl(var(--theme-accent-rgb-text));
 }
@@ -34,4 +30,19 @@
 
 .is-theme-background-type-color .transitional-text {
   color: hsl(var(--theme-background-color-rgb-text));
+}
+
+.is-header-item-justify-left .transitional {
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.is-header-item-justify-center .transitional {
+  justify-content: center;
+  text-align: center;
+}
+
+.is-header-item-justify-right .transitional {
+  justify-content: flex-end;
+  text-align: right;
 }
